upgraded nan and merged node-udev changes to be compatible with node 8

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "gypfile": true,
   "readmeFilename": "README.md",
   "dependencies": {
-    "node-uuid": "~1.4.1",
-    "nan": "^2.1.0"
+    "node-uuid": "*",
+    "nan": "*"
   }
 }
